--- a/themes/zephyr/front-end/src/styles/_variables.scss
+++ b/themes/zephyr/front-end/src/styles/_variables.scss
@@ -20,7 +20,7 @@ $zephyr-white: var(--zephyr-white);
 $zephyr-black: var(--zephyr-black);
 $zephyr-gray: var(--zephyr-gray);
 $zephyr-green: var(--zephyr-green);
-$zephyr-pink: var(--zephyr-pink);
+$zephyr-gray-light: var(--zephyr-gray-light);
 $zephyr-blue-light: var(--zephyr-blue-light);
 $zephyr-blue: var(--zephyr-blue);
 $zephyr-dark-blue: var(--zephyr-dark-blue);
