--- a/themes/zephyr/front-end/src/styles/style.scss
+++ b/themes/zephyr/front-end/src/styles/style.scss
@@ -4,6 +4,7 @@
 @import "mixins";
 @import "general-classes";
 @import "layouts/quform_form";
+@import "pages/growthGuide";
 
 /*!
  end general ##############################
