--- a/themes/zephyr/front-end/src/styles/_general-classes.scss
+++ b/themes/zephyr/front-end/src/styles/_general-classes.scss
@@ -92,7 +92,7 @@ h1, h2, h3, h4, h5, h6, p, ul, ol  ,form{
     @include paddingX(size(22));
     @include x-large-screen {
         max-width: size(1124);
-        @include paddingX(size(76));
+        //@include paddingX(size(76));
     }
 }
 
