--- a/themes/zephyr/front-end/src/components/footer-component/index.html
+++ b/themes/zephyr/front-end/src/components/footer-component/index.html
@@ -20,7 +20,7 @@
           <h3 class="headline-7 show">JOIN OUR NEWSLETTER</h3>
           <h3 class="headline-7 hide">NEWSLETTER</h3>
           <input type="email" placeholder="Email">
-          <a class="btn" href="#">Submit</a>
+          <a class="btn has-bg" href="#">Submit</a>
         </div>
         <div class="title-and-link social">
           <h3 class="headline-7 show">FOLLOW</h3>
