--- a/themes/zephyr/front-end/src/components/component-contact-us/index.html
+++ b/themes/zephyr/front-end/src/components/component-contact-us/index.html
@@ -12,7 +12,11 @@
           <input type="email" placeholder="Email">
           <textarea placeholder="Message"></textarea>
         </form>
-        <a href="#" class="btn">Send message</a>
+        <a href="#" class="btn has-bg">Send message</a>
+        <svg class="arrow hide" width="25" height="40" viewBox="0 0 25 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M0 20L25 40L25 0L0 20Z" fill="#333333"/>
+        </svg>
+      
       </div>
       <div class="content">
         <h3 class="title show"> We’d love to hear about your product or service</h3>
@@ -25,7 +29,7 @@
         
         <div class="contact-info">
           <div class="icon-and-info">
-            <svg  class="hide" width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="hide" width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M19.0001 1H1.1001V13.3057H19.0001V1Z" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>
               <path d="M1 1L10.0503 7.99337L18.9 1" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>
               <path d="M1.1001 13.3056L8.73427 6.97803" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>
@@ -73,6 +77,47 @@
             <p class="paragraph-1 small-fz">1-3 French Street London E1 6JB</p>
           </div>
         </div>
+        
+<!--        <div class="contact-info-in-about-page hide">-->
+<!--          <div class="icon-and-info">-->
+<!--            <svg class="hide" width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">-->
+<!--              <path d="M19.0001 1H1.1001V13.3057H19.0001V1Z" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>-->
+<!--              <path d="M1 1L10.0503 7.99337L18.9 1" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>-->
+<!--              <path d="M1.1001 13.3056L8.73427 6.97803" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>-->
+<!--              <path d="M18.9999 13.3056L11.3657 6.97803" stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>-->
+<!--            </svg>-->
+<!--            <div class="info">-->
+<!--              <h3 class="text">By Email</h3>-->
+<!--              <p class="paragraph-1 small-fz">hello@zephyr.ai</p>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="icon-and-info location">-->
+<!--            <svg class="hide" width="20" height="23" viewBox="0 0 17 23" fill="none" xmlns="http://www.w3.org/2000/svg">-->
+<!--              <path-->
+<!--                d="M8.58849 11.5276C10.414 11.5276 11.8938 10.0477 11.8938 8.22228C11.8938 6.39682 10.414 4.91699 8.58849 4.91699C6.76303 4.91699 5.2832 6.39682 5.2832 8.22228C5.2832 10.0477 6.76303 11.5276 8.58849 11.5276Z"-->
+<!--                stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>-->
+<!--              <path-->
+<!--                d="M8.58803 1C2.11284 1 -0.758283 8.18014 2.71507 13.0214C4.78321 15.9065 7.78505 20.2902 8.58803 21.4713C9.39101 20.2949 12.3928 15.9065 14.461 13.0214C17.9343 8.18014 15.0586 1 8.58803 1Z"-->
+<!--                stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>-->
+<!--            </svg>-->
+<!--            <div class="info">-->
+<!--              <h3 class="text">Over A Cuppa</h3>-->
+<!--              <p class="paragraph-1 small-fz">1-3 French Place,  London, E1 6JB United Kingdom</p>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="icon-and-info">-->
+<!--            <svg class="hide" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">-->
+<!--              <path-->
+<!--                d="M3.87135 1.01247C3.85473 0.995842 3.82979 0.995842 3.81317 1.01247L1.00772 3.81913C0.691845 9.97713 10.1431 18.9335 16.1821 19L18.9875 16.1933C19.0042 16.1767 19.0042 16.1518 18.9875 16.1351L14.4947 11.6403C14.478 11.6237 14.4531 11.6237 14.4365 11.6403L12.2877 13.79C10.6626 13.711 6.44821 9.20374 6.21962 7.71934L8.36839 5.56965C8.38501 5.55301 8.38501 5.52807 8.36839 5.51143L3.87135 1.01247Z"-->
+<!--                stroke="#252525" stroke-width="1.08" stroke-miterlimit="10"/>-->
+<!--            </svg>-->
+<!--            <div class="info">-->
+<!--              <h3 class="text">Over the Phone</h3>-->
+<!--              <p class="paragraph-1 small-fz">+44 07887 552949</p>-->
+<!--            </div>-->
+<!--          -->
+<!--          </div>-->
+<!--        </div>-->
       </div>
     </div>
   </div>
