--- a/themes/zephyr/front-end/src/components/header-component/style.scss
+++ b/themes/zephyr/front-end/src/components/header-component/style.scss
@@ -10,6 +10,7 @@ header {
         display: flex;
         align-items: center;
         @include paddingY(size(35));
+        background: aquamarine;
         @include min-medium-screen {
             justify-content: space-between;
         }
@@ -80,7 +81,7 @@ header {
                 margin: 0;
             }
             
-            &.light {
+            &.dark {
                 display: none;
             }
         }
@@ -151,7 +152,7 @@ header {
         }
         
         
-        &.white {
+        &.dark {
             .menu-and-cross {
                 .menu {
                     svg {
@@ -175,11 +176,11 @@ header {
             
             .logo {
                 &.dark {
-                    display: none;
+                    display: block;
                 }
                 
                 &.light {
-                    display: block;
+                    display: none;
                 }
                 
                 @include min-medium-screen {
