--- a/themes/zephyr/front-end/src/components/component-article-guide/style.scss
+++ b/themes/zephyr/front-end/src/components/component-article-guide/style.scss
@@ -12,7 +12,7 @@ section.component-article-guide {
                 .headline-6 {
                     font-size: size(24);
                     letter-spacing: size(0.4);
-                    font-family: $Acumin;
+                    font-family: $Sailec;
                     text-transform: none;
                     @include paddingX(size(26));
                     margin-bottom: size(40);
