--- a/themes/zephyr/front-end/src/components/template-component/index.html
+++ b/themes/zephyr/front-end/src/components/template-component/index.html
@@ -3,8 +3,14 @@
 <meta content="ie=edge" http-equiv="X-UA-Compatible">
 
 <section class="template-component">
-  <div class="container">
-  
+  <div class="wysiwyg-block">
+      <h1>lorem ipsum and another lorem ipsum</h1>
+      <h2 style="font-style: italic">lorem ipsum and another lorem ipsum</h2>
+      <h3>lorem ipsum and another lorem ipsum</h3>
+      <h4>lorem ipsum and another lorem ipsum</h4>
+      <h5>lorem ipsum and another lorem ipsum</h5>
+      <h6>lorem ipsum and another lorem ipsum</h6>
+      <p>lorem ipsum and another lorem ipsum</p>
   </div>
 </section>
 <script src="./main.js"></script>
