--- a/themes/zephyr/front-end/src/styles/_variables.scss
+++ b/themes/zephyr/front-end/src/styles/_variables.scss
@@ -30,9 +30,7 @@ $zephyr-green-light: var(--zephyr-green-light);
 // fonts
 $Sailec: 'Sailec';
 $Canela: 'Canela';
-$Freight: 'Freight Text Pro Book';
-$Acumin : 'Acumin Pro';
-
+$Freight: 'FreightText Pro';
 
 //override bootstrap variables
 $grid-gutter-width: 76px;
