--- a/themes/zephyr/front-end/src/styles/_fonts.scss
+++ b/themes/zephyr/front-end/src/styles/_fonts.scss
@@ -1,32 +1,64 @@
 @import "variables";
 
 @font-face {
-    font-family: $Acumin;
-    src: url('./fonts/Acumin-RPro.otf') format('opentype');
+    font-family: $Sailec;
+    src: url('fonts/sailecRegular.woff') format('woff');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
     font-family: $Sailec;
-    src: url('./fonts/SailecRegular.ttf') format('opentype');
-    font-weight: 400;
+    src: url('fonts/sailecMedium.woff') format('woff');
+    font-weight: 500;
     font-style: normal;
     font-display: swap;
 }
+
+
 
 @font-face {
     font-family: $Canela;
-    src: url('./fonts/canela_light.otf') format('opentype');
+    src: url('./fonts/canelaLight.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: $Canela;
+    src: url('./fonts/canelaLightItalic.woff') format('woff');
+    font-weight: 300;
+    font-style: italic;
+    font-display: swap;
+}
+
+
+
+@font-face {
+    font-family: $Freight;
+    src: url('./fonts/freightTextProBookRegular.woff') format('woff');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
-
 @font-face {
     font-family: $Freight;
-    src: url('./fonts/Freight Text Light.otf') format('opentype');
-    font-weight: 400;
+    src: url('./fonts/freightTextProMedium-Regular.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: $Freight;
+    src: url('./fonts/freightTextProMedium-Italic.woff') format('woff');
+    font-weight: 500;
+    font-style: italic;
+    font-display: swap;
+}
+@font-face {
+    font-family: $Freight;
+    src: url('./fonts/freightTextProSemibold-Regular.woff') format('woff');
+    font-weight: 600;
     font-style: normal;
     font-display: swap;
 }
