--- a/themes/zephyr/front-end/src/styles/_general-classes.scss
+++ b/themes/zephyr/front-end/src/styles/_general-classes.scss
@@ -160,7 +160,7 @@ h1, h2, h3, h4, h5, h6, p, ul, ol  ,form{
     
 }
 
-.headline-1, .quote, .wysiwyg-block h1 {
+.headline-1, .wysiwyg-block h1 {
     color: $zephyr-white;
     font-family: $Canela;
     font-size: size(27);
@@ -175,10 +175,9 @@ h1, h2, h3, h4, h5, h6, p, ul, ol  ,form{
         letter-spacing: size(0.44);
         line-height: size(66);
     }
-    
 }
 
-.headline-2, .tagline, .wysiwyg-block h2 {
+.headline-2, .wysiwyg-block h2 {
     color: $zephyr-gray;
     font-family: $Canela;
     font-size: size(27);
@@ -193,7 +192,7 @@ h1, h2, h3, h4, h5, h6, p, ul, ol  ,form{
     }
 }
 
-.headline-3, .page-title, .wysiwyg-block h3 {
+.headline-3, .wysiwyg-block h3 {
     color: $zephyr-gray;
     font-family: $Freight;
     font-size: size(24);
@@ -206,7 +205,7 @@ h1, h2, h3, h4, h5, h6, p, ul, ol  ,form{
     }
 }
 
-.headline-4, .subtitle, .wysiwyg-block h4 {
+.headline-4, .wysiwyg-block h4 {
     color: $zephyr-gray;
     font-family: $Canela;
     font-size: size(21);
@@ -220,7 +219,7 @@ h1, h2, h3, h4, h5, h6, p, ul, ol  ,form{
     }
 }
 
-.headline-5, .section-title, .wysiwyg-block h5 {
+.headline-5, .wysiwyg-block h5 {
     color: $zephyr-green;
     font-family: $Sailec;
     font-size: size(14);
@@ -234,7 +233,7 @@ h1, h2, h3, h4, h5, h6, p, ul, ol  ,form{
     }
 }
 
-.headline-6, .cta, .wysiwyg-block h6 {
+.headline-6, .wysiwyg-block h6 {
     color: $zephyr-gray;
     font-family: $Sailec;
     font-size: size(14);
@@ -263,7 +262,7 @@ h1, h2, h3, h4, h5, h6, p, ul, ol  ,form{
 
 .headline-8 {
     color: $zephyr-gray;
-    font-family: $Acumin;
+    font-family: $Sailec;
     font-size: size(18);
     font-weight: 400;
     font-style: italic;
@@ -340,7 +339,7 @@ ol {
             
             > li {
                 color: #3d3d3d;
-                font-family: $Acumin;
+                font-family: $Sailec;
                 font-size: size(12);
                 letter-spacing: size(0.22);
                 line-height: size(24);
