edit class show and hide to  mobile only and desktop only

--- a/themes/zephyr/front-end/src/components/footer-component/index.html
+++ b/themes/zephyr/front-end/src/components/footer-component/index.html
@@ -17,15 +17,14 @@
       <!--      links-->
       <div class="links">
         <div class="title-and-link newsletter">
-          <h3 class="headline-7 show">JOIN OUR NEWSLETTER</h3>
-          <h3 class="headline-7 hide">NEWSLETTER</h3>
+          <h3 class="headline-7">JOIN OUR NEWSLETTER</h3>
           <input type="email" placeholder="Email">
           <a class="btn has-bg" href="#">Submit</a>
         </div>
         <div class="title-and-link social">
-          <h3 class="headline-7 show">FOLLOW</h3>
-          <h3 class="headline-7 hide">SOCIAL</h3>
-          <div class="icons show">
+          <h3 class="headline-7 mobile-only">FOLLOW</h3>
+          <h3 class="headline-7 desktop-only">SOCIAL</h3>
+          <div class="icons mobile-only">
             <a class="icon" href="#">
               <svg class="tw" width="25" height="21" viewBox="0 0 25 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M22.4121 5.54688C23.3887 4.81445 24.2676 3.93555 24.9512 2.91016C24.0723 3.30078 23.0469 3.59375 22.0215 3.69141C23.0957 3.05664 23.877 2.08008 24.2676 0.859375C23.291 1.44531 22.168 1.88477 21.0449 2.12891C20.0684 1.10352 18.75 0.517578 17.2852 0.517578C14.4531 0.517578 12.1582 2.8125 12.1582 5.64453C12.1582 6.03516 12.207 6.42578 12.3047 6.81641C8.05664 6.57227 4.24805 4.52148 1.70898 1.44531C1.26953 2.17773 1.02539 3.05664 1.02539 4.0332C1.02539 5.79102 1.9043 7.35352 3.32031 8.28125C2.49023 8.23242 1.66016 8.03711 0.976562 7.64648V7.69531C0.976562 10.1855 2.73438 12.2363 5.07812 12.7246C4.6875 12.8223 4.19922 12.9199 3.75977 12.9199C3.41797 12.9199 3.125 12.8711 2.7832 12.8223C3.41797 14.873 5.32227 16.3379 7.56836 16.3867C5.81055 17.7539 3.61328 18.584 1.2207 18.584C0.78125 18.584 0.390625 18.5352 0 18.4863C2.24609 19.9512 4.93164 20.7812 7.86133 20.7812C17.2852 20.7812 22.4121 13.0176 22.4121 6.23047C22.4121 5.98633 22.4121 5.79102 22.4121 5.54688Z" fill="white"/>
@@ -42,7 +41,7 @@
               </svg>
             </a>
           </div>
-          <div class="link hide">
+          <div class="link desktop-only">
             <a class="paragraph" href="#"><span data-hover="Facebook">Facebook</span></a>
             <a class="paragraph" href="#"><span data-hover="Linkedin">Linkedin</span></a>
             <a class="paragraph" href="#"><span data-hover="Twitter">Twitter</span></a>
