some changes in general

--- a/themes/zephyr/front-end/src/components/component-growth-guide/index.html
+++ b/themes/zephyr/front-end/src/components/component-growth-guide/index.html
@@ -183,7 +183,7 @@
                   <img alt="name of person" src="./../../html/images/se.png">
                   <p class="paragraph-1">Writen by <span>Nick Rushton</span></p>
                 </div>
-                <a class="next-chapter iv-st-from-bottom" href="#">
+                <a class="next-chapter" href="#">
                   <h3 class="headline-3">Next Chapter ></h3>
                   <h6 class="headline-8"><span>1.2 </span> Websites & why I am not talking about them here</h6>
                 </a>
