--- a/themes/zephyr/front-end/src/components/header-component/style.scss
+++ b/themes/zephyr/front-end/src/components/header-component/style.scss
@@ -10,8 +10,8 @@ header {
         display: flex;
         align-items: center;
         @include paddingY(size(35));
-        background: aquamarine;
-        @include min-medium-screen {
+        background: black;
+        @include min-small-screen {
             justify-content: space-between;
         }
         
@@ -21,7 +21,7 @@ header {
             position: relative;
             
             
-            @include min-medium-screen {
+            @include min-small-screen {
                 display: none;
             }
             
@@ -45,6 +45,7 @@ header {
                 transform: translate(-50%, -50%);
                 transition: all 400ms ease-in-out;
                 z-index: 2;
+                cursor: pointer;
                 
                 svg {
                     z-index: 2;
@@ -77,7 +78,7 @@ header {
         .logo {
             margin: 0 auto;
             z-index: 2;
-            @include min-medium-screen {
+            @include min-small-screen {
                 margin: 0;
             }
             
@@ -95,21 +96,23 @@ header {
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
             background: $zephyr-gray;
             transition: all 400ms ease-in-out;
-    
-        
+            padding-top: size(131);
             
             .small-link {
                 color: $zephyr-gray-light;
                 overflow: hidden;
-    
+                
+                &:not(:last-child) {
+                    margin-bottom: size(20);
+                }
+                
                 span {
                     position: relative;
                     transition: transform 0.3s ease-in-out;
                     display: block;
-        
+                    
                     &:before {
                         position: absolute;
                         top: 100%;
@@ -117,17 +120,27 @@ header {
                         transform: translate3d(0, 0, 0);
                     }
                 }
-    
+                
                 &:hover {
                     span {
                         transform: translateY(-100%);
                         color: $zephyr-green;
-
+                        
                     }
                 }
-                &:not(:last-child) {
-                    margin-bottom: size(30);
+                @include min-medium-screen{
+                    font-size: size(14);
+                    &:not(:last-child) {
+                        margin-right: size(40);
+                    }
                 }
+                @include x-large-screen {
+                        &:not(:last-child) {
+                            margin-right: size(62) !important;
+                    }
+                }
+    
+    
             }
             
             
@@ -135,20 +148,24 @@ header {
                 right: 0;
             }
             
-            @include min-medium-screen {
+            @include min-small-screen {
                 width: auto;
                 height: auto;
                 flex-direction: row;
                 position: relative;
                 right: 0;
                 background: none;
+                padding-top: 0;
                 .small-link {
+                    font-size: size(12);
+                    
                     &:not(:last-child) {
                         margin-bottom: 0;
-                        margin-right: size(62);
+                        margin-right: size(20);
                     }
                 }
             }
+            
         }
         
         
@@ -183,7 +200,7 @@ header {
                     display: none;
                 }
                 
-                @include min-medium-screen {
+                @include min-small-screen {
                     &.dark {
                         display: block;
                     }
@@ -200,7 +217,7 @@ header {
                     color: $zephyr-gray;
                 }
                 
-                @include min-medium-screen {
+                @include min-small-screen {
                     background: none;
                     .small-link {
                         color: $zephyr-gray-light;
